--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -77,10 +77,10 @@ jobs:
           path: |
                 amazon-chime-sdk/build/reports/coverage/debug
                 app/build/reports/coverage/debug
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v2
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+#       - name: Upload coverage to Codecov
+#         uses: codecov/codecov-action@v2
+#         with:
+#           token: ${{ secrets.CODECOV_TOKEN }}
 #           directory: ./coverage/reports/
 #           env_vars: OS,PYTHON
 #           fail_ci_if_error: true
@@ -89,5 +89,5 @@ jobs:
 #           name: codecov-umbrella
 #           path_to_write_report: ./coverage/codecov_report.txt
 #           verbose: true
-#       - name: Upload Test Report
-#         run:  bash <(curl -s https://codecov.io/bash) -f "amazon-chime-sdk/build/reports/coverage/debug/report.xml"
+      - name: Upload Test Report
+        run:  bash <(curl -s https://codecov.io/bash) -f "amazon-chime-sdk/build/reports/coverage/debug/report.xml"
