--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,11 +31,13 @@ android {
     }
     buildTypes {
         debug {
-//            buildConfigField("long", "VERSION_CODE", "${defaultConfig.versionCode}")
-//            buildConfigField("String","VERSION_NAME","\"${defaultConfig.versionName}\"")
+            buildConfigField("long", "VERSION_CODE", "${defaultConfig.versionCode}")
+            buildConfigField("String","VERSION_NAME","\"${defaultConfig.versionName}\"")
             testCoverageEnabled true
         }
         release {
+            buildConfigField("long", "VERSION_CODE", "${defaultConfig.versionCode}")
+            buildConfigField("String","VERSION_NAME","\"${defaultConfig.versionName}\"")
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
