--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -48,19 +48,20 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-#        # Execute unit tests
-#       - name: Unit Test with Android Emulator Runner
-#         uses: ReactiveCircus/android-emulator-runner@v2
+       # Execute unit tests
+      - name: Unit Test with Android Emulator Runner
+        uses: ReactiveCircus/android-emulator-runner@v2
         
-#         with: 
-#             target: google_apis
-#             api-level: 30
-# #             arch: arm64-v8a
-# #             arch: x86_64
+        with: 
+            target: google_apis
+            api-level: 30
+#             arch: arm64-v8a
+#             arch: x86_64
+            script: ./gradlew jacocoTestReport --stacktrace
 #             script: ./gradlew connectedCheck --stacktrace
       
-      - name: Unit Test   
-        run: ./gradlew jacocoTestReport --stacktrace
+#       - name: Unit Test   
+#         run: ./gradlew jacocoTestReport --stacktrace
        
 
       - name: generate report
