--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -57,7 +57,7 @@ jobs:
             api-level: 30
 #             arch: arm64-v8a
 #             arch: x86_64
-            script: ./gradlew jacocoTestReport --stacktrace
+            script: ./gradlew testDebugUnitTest --stacktrace
 #             script: ./gradlew connectedCheck --stacktrace
       
 #       - name: Unit Test   
