--- a/build.gradle
+++ b/build.gradle
@@ -76,6 +76,7 @@ task installGitHook(type: Copy) {
 
 tasks.withType(Test) {
     exclude '**/DefaultActiveSpeakerDetectorTest/`DefaultActiveSpeakerDetector should show active speakers scores`'
+    exclude '**/DefaultActiveSpeakerDetectorTest/`DefaultActiveSpeakerDetector should send active speakers scores to each observer`'
 }
 
 tasks.getByPath(':app:preBuild').dependsOn installGitHook
