--- a/amazon-chime-sdk/build.gradle
+++ b/amazon-chime-sdk/build.gradle
@@ -119,7 +119,7 @@ task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest']) {
 }
 
 tasks.withType(Test) {
-    exclude "com.amazonaws.services.chime.sdk.meetings.audiovideo.audio.activespeakerdetector.DefaultActiveSpeakerDetectorTest"
+    exclude "**/*DefaultActiveSpeakerDetectorTest*"
 }
 
 private Integer generateVersionCode() {
