--- a/codecov.yml
+++ b/codecov.yml
@@ -1,6 +1,8 @@
 comment:
   layout: "reach, diff, flags, files"
   behavior: default
+  require_head: no     # default yes
+  require_base: no 
 
 coverage:
   status:
